--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-site-verification" content="h4mEDIgzazXW07jKNoHBK9MSwtQICJEiqf2G0RDzBmQ" />
   <title>Counselling Directory Homepage</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
